fix(common): eslint & code format

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,6 +8,9 @@ packageExtensions:
   '@atls-ui-parts/layout@*':
     dependencies:
       csstype: '*'
+  eslint-module-utils@*:
+    dependencies:
+      eslint-import-resolver-node: '*'
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
