fix(academy-test): app mistakes fixed

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,7 @@
 packageExtensions:
+  react@*:
+    dependencies:
+      'cjs': '*'
   react-intl@*:
     dependencies:
       '@formatjs/ecma402-abstract': '*'
