--- a/frontend/fragments/landing-main/package.json
+++ b/frontend/fragments/landing-main/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fragments/landing-main",
   "version": "0.0.0",
-  "main": "src/index.tsx",
+  "main": "src/index.ts",
   "peerDependencies": {
     "@emotion/styled": "*",
     "react": "*",
