--- a/frontend/ui/link/package.json
+++ b/frontend/ui/link/package.json
@@ -9,11 +9,15 @@
   "devDependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@types/react-dom": "^17.0.9",
     "@types/styled-system": "^5",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
     "styled-system": "^5.1.5"
   },
   "peerDependencies": {
     "@emotion/styled": "*",
+    "next": "*",
     "react": "*",
     "styled-system": "*"
   }
