--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "workspaces": [
     "frontend/**/*"
   ],
+  "resolutions": {
+    "@types/node": "16",
+    "@types/react": "17.0.47",
+    "@types/react-dom": "17",
+    "next": "12.1.0",
+    "react": "17",
+    "react-dom": "17",
+    "react-intl": "5.24.3",
+    "typescript": "4.4.4"
+  },
   "devDependencies": {
     "@atls/code-service": "^0.0.15",
     "@atls/schematics": "^0.0.12",
     "@types/eslint": "^8",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.34",
-    "@types/react": "^17.0.16",
+    "@types/react": "17.0.47",
     "eslint": "8.4.1",
     "typescript": "^4.6.4"
   },
